--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,14 +2,19 @@
 
 </body>
 
-<footer id="footer">
-  <div class="foot">
-    <a href="https://github.com/pandeyom331"><i class="git fab fa-github fa-1x "></i></a>
-    <a href="https://www.facebook.com/profile.php?id=100004398076666"><i class="git fab fa-facebook-f"></i></a>
-    <a href="https://www.instagram.com/om_pandey305/"><i class="git fab fa-instagram "></i></a>
-    <a class="email" href="mailto:pandeyom305@gmail.com"><i class="git fas fa-envelope"></i></a>
-  </div>    
-     <p target="_self">© Copyright 2021 To-Do List By WEBZINE</p>
+  <footer id="footer">
+  <a href="https://github.com/pandeyom331"><i class="git fab fa-github fa-1x "></i></a>
+  <a href="https://www.facebook.com/profile.php?id=100004398076666"><i class="git fab fa-facebook-f"></i></a>
+  <a href="https://www.instagram.com/solo_thinker_134/"><i class="git fab fa-instagram "></i></a>
+  <a class="email" href="mailto:pandeyom305@gmail.com"><i class="git fas fa-envelope"></i></a>
+  <p>Copyright &#169; <span id="year"></span> TinDog 🐶</p>
+
 </footer>
+
+ <script>
+var year = new Date();
+var newYear = year.getFullYear();
+document.getElementById("year").innerHTML = newYear;
+</script>
 
 </html>
