--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,7 +7,7 @@
   <a href="https://www.facebook.com/profile.php?id=100004398076666"><i class="git fab fa-facebook-f"></i></a>
   <a href="https://www.instagram.com/solo_thinker_134/"><i class="git fab fa-instagram "></i></a>
   <a class="email" href="mailto:pandeyom305@gmail.com"><i class="git fas fa-envelope"></i></a>
-  <p>Copyright &#169; <span id="year"></span> TinDog 🐶</p>
+  <p>Copyright &#169; <span id="year"></span> Todo-list 📄🖊</p>
 
 </footer>
 
